codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_add_dir_prompt_filtered_suggestions.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 139
expression: popup
---
▌ Add working directory
▌ Current directory: <tempdir>
▌
▌ b
▌ › <tempdir>\beta-lib
Use tab to complete and ↑/↓ to choose a directory
Press enter to confirm or esc to go back
